# MeorwikProjects

./: .gitignore  db.json  main.py  pyproject.toml  readme.md
.github/: dependabot.yml
.github/workflows/: test.yml
db/: storage_manager.py
db/models/: project.py
domain/entities/: project.py
interfaces/: routes.py
src/: main.py
src/db/: storage_manager.py
src/domain/: dependencies.py  project_manager.py
src/domain/entities/: project.py
src/interfaces/: routes.py
src/interfaces/schemas/: project.py
src/projects/: main.py
src/projects/db/: __init__.py  storage_manager.py
src/projects/db/gateways/: __init__.py  base.py  storage_gateway.py  user_gateway.py
src/projects/db/models/: project.py
src/projects/domain/: __init__.py  dependencies.py  project_manager.py  security.py
src/projects/domain/entities/: __init__.py  project.py  user.py
src/projects/domain/entities/enums/: __init__.py  roles.py
src/projects/domain/protocols/: __init__.py  fs_storage.py  projects_protocol.py  users_protocol.py
src/projects/interfaces/: api.py  routes.py
src/projects/interfaces/routes/: __init__.py  auth.py  projects.py  users.py
src/projects/interfaces/schemas/: __init__.py  project.py  users.py
src/projects/interfaces/schemas/enums/: __init__.py  roles.py
tests/: conftest.py  test.py
tests/interfaces/: conftest.py  test_projects.py
