[project]
name = "projects"
version = "0.1.0"
description = "backend project"
authors = [{ name = "Илья" }]
dependencies = [
    "fastapi==0.116.1",
    "sqlalchemy==2.0.42",
    "uvicorn[standard]==0.35.0",
    "dishka==1.6.0",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]==2.11.7",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "ruff==0.12.7",
    "mypy==1.17.1",
    "sqlalchemy-stubs==0.4",
    "pytest==8.4.1",
    "pre-commit==4.2.0",
    "httpx==0.28.1",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F401"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
